<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab4_navigation</name>
  <version>1.0.0</version>
  <description>4th ROS 2 lab at ECN. Using the navigation stack.</description>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>map_simulator</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
